Fix photo gap on mobile; update grid media query

--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ footer {
 
 @media screen and (max-width: 543px) {
   .photos-section {
-    flex-direction: column;
+    grid-template-columns: 1fr;
   }
   .photos-section .photo {
     width: 100%;
